# nmrxiv-downloader

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-search/: 02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-browse/: 03-01-PLAN.md  03-01-SUMMARY.md
.planning/phases/04-download/: 04-01-PLAN.md  04-01-SUMMARY.md
nmrxiv_downloader/: __init__.py  __main__.py  cli.py  client.py  models.py  output.py
scripts/: install-skill.sh
skills/: SKILL.md
