[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nmrxiv-downloader"
version = "0.1.0"
description = "CLI tool for searching and downloading NMR datasets from nmrxiv.org"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Christoph Steinbeck" }
]
dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.scripts]
nmrxiv = "nmrxiv_downloader.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
